--- a/Views/Home.ejs
+++ b/Views/Home.ejs
@@ -30,7 +30,7 @@
 
 
     <title>Katniss Responsive Bootstrap 4 Admin Template</title>
-    <base href="http://localhost:3000/">
+    <base href="http://bigprojecta.herokuapp.com/">
     <!-- vendor css -->
     <link href="Admin/lib/font-awesome/css/font-awesome.css" rel="stylesheet">
     <link href="Admin/lib/Ionicons/css/ionicons.css" rel="stylesheet">
