--- a/Views/Pages/Admin_List.ejs
+++ b/Views/Pages/Admin_List.ejs
@@ -63,7 +63,7 @@
                                 </table>
                                 <div>
                                   <center>
-                                      <a href="./adduser"><button class="btn btn-primary" type="reset">Thêm Mới</button></a>
+                                      <a href="/adduser"><button class="btn btn-primary" type="reset">Thêm Mới</button></a>
                                   </center>
                                  
                                 </div>
