--- a/Views/Pages/Edit_User.ejs
+++ b/Views/Pages/Edit_User.ejs
@@ -88,7 +88,7 @@
                               
                                 <div>
                                       <input type="submit" class="btnRegister btn btn-primary active" style="margin-bottom:50px;margin-left:520px;width: 110px;font-family: 'PT Serif', serif;font-weight: 900;font-size: 20px;"  value="Cập Nhật"/>
-                                        <a href="./listuser">
+                                        <a href="/listuser">
                                                 <button type="button" class="btn btn-warning"  style="margin-bottom:50px;margin-left:480px;width: 180px;display:block;font-family: 'PT Serif', serif;font-weight: 900;font-size: 20px;">Xem Danh Sách</button>
                                         </a>
                                 </div>
