--- a/Views/Pages/Categories_List.ejs
+++ b/Views/Pages/Categories_List.ejs
@@ -46,7 +46,7 @@ db.collection("Category")
         <tr role="row" >
 <td class="sorting_1">
  <center>
-    <img src="./Upload/`+element.imgURL+ `" class="wd-70 rounded-circle" alt="Image">
+    <img src="`+element.imgURL+ `" class="wd-70 rounded-circle" alt="Image">
 </center>
 </td>
 <td style="width: 130px;text-align: center;padding-top: 33px;color: black;">`+ element.catID + `</td>
