--- a/Views/Pages/Product_List.ejs
+++ b/Views/Pages/Product_List.ejs
@@ -55,11 +55,11 @@ db.collection("Product")
         <tr role="row" >
 <td class="sorting_1">
  <center>
-    <img src="`+element.imgURL+ `" class="wd-70 rounded-circle" alt="Image">
+    <img src="./Upload/`+element.imgURL+ `" class="wd-70 rounded-circle" alt="Image">
 </center>
 </td>
 <td style="width: 130px;text-align: center;padding-top: 33px;color: black;">`+ element.catID + `</td>
-<td style="width: 230px;text-align: center;padding-top: 33px;color: black;">`+ element.name + `/`+ element.proID+`</td>
+<td style="width: 230px;text-align: center;padding-top: 33px;color: black;">`+ element.name + `</td>
 <td style="width: 800px;text-align: center;padding-top: 33px;color: black;">`+ element.description+ `</td>
 <td style="width: 130px;text-align: center;padding-top: 33px;color: black;">`+ element.quantity + `</td>
 <td style="width: 230px;text-align: center;padding-top: 33px;color: black;">`+ element.discount + `</td>
