--- a/Views/Pages/Add_Product.ejs
+++ b/Views/Pages/Add_Product.ejs
@@ -72,12 +72,12 @@
                                             <select class="form-control" name="discount_percent" id="discount_percent">
                                                     
                                                    
-                                                    <option value="0%">0%</option>
+                                                    <option value="0%">0</option>
 
-                                                    <option value="5%">5%</option>
-                                                    <option value="15%">15%</option>
-                                                    <option value="25%">25%</option>
-                                                    <option value="50%">50%</option>
+                                                    <option value="5%">5</option>
+                                                    <option value="15%">15</option>
+                                                    <option value="25%">25</option>
+                                                    <option value="50%">50</option>
                                                   </select>
                                           
                                                   
